# pinn4bhoc

./: .gitignore  README.md  clone2colab.ipynb  pyproject.toml
notebooks/: 01_pinn_training.ipynb  02_pinn_testing_prototype.ipynb  best_fcnn_sobol.pth
pinn/: nn.py
pinn4bhoc/: nn.py
pinn4bhoc/orbits/: orbit_setup.py  setup.py
pinn4bhoc/utils/: data.py
src/: pinn_core.py
src/utils/: data.py  monitoring.py
